# rust-bedrock-lancedb

./: cdk.json  package-lock.json  package.json  tsconfig.json
document-processor/: .env-sample  main.ts  package-lock.json  package.json
lambdas/text_generator/: .env.sample  Cargo.toml
lambdas/text_generator/events/: prompt.json
lambdas/text_generator/src/: config.rs  main.rs
lib/: bedrock_rust-stack.ts
test/: bedrock_rust.test.ts
